fix(section): aligns the keyline with to match Fira Sans

--- a/src/css/component.section.css
+++ b/src/css/component.section.css
@@ -21,7 +21,7 @@
 
     content: "";
     height: 2px;
-    margin-top: 0.333em;
+    margin-top: 0.16665em;
   }
 
   & .section__title > * {
